Hope I can starte working at the renderer now

--- a/Platforms/3ds/CMakeLists.txt
+++ b/Platforms/3ds/CMakeLists.txt
@@ -2,6 +2,12 @@ cmake_minimum_required(VERSION 3.22)
 
 project(CraftusNext)
 
+set(CMAKE_EXE_LINKER_FLAGS "-L${DEVKITPRO}/libctru/lib -L${DEVKITPRO}/picaGL/lib -L${DEVKITPRO}/portlibs/3ds/lib -specs=3dsx.specs -Wl,--gc-sections")
+
+include_directories(${DEVKITPRO}/libctru/include ${DEVKITPRO}/picaGL/include ${DEVKITPRO}/portlibs/3ds/include)
+add_definitions("-D__3DS__")
+
+
 set(APP_TITLE "${PROJECT_NAME}")
 set(APP_DESCRIPTION "Minecraft Clone for for 3DS")
 set(APP_AUTHOR "Tobi-D7, tobid7vx")
@@ -14,11 +20,11 @@ enable_language(ASM)
 set(BASE_CTR ON CACHE BOOL "Enable 3ds")
 add_subdirectory(../../base base)
 
-add_executable(${PROJECT_NAME} src/main.cpp)
+add_executable(${PROJECT_NAME}.elf src/main.cpp)
 
-target_include_directories(${PROJECT_NAME} PRIVATE src base)
+target_include_directories(${PROJECT_NAME}.elf PRIVATE src base)
 
-target_link_libraries(${PROJECT_NAME} citro2d citro3d ctru m base)
+target_link_libraries(${PROJECT_NAME}.elf citro2d citro3d ctru m base)
 
 add_custom_command(
 	OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.smdh
